Change font-face, add stories Input

--- a/src/app/styles/fonts.scss
+++ b/src/app/styles/fonts.scss
@@ -1,13 +1,40 @@
-@mixin fontFace($name, $path, $weight) {
+@function getSrcWithFormat($path, $ext, $format) {
+  @return url(quote($path + '.' + $ext)) format(quote($format));
+}
+
+@function getExtension($ext, $filename) {
+  $extmods: (
+    svg: '#' + $filename,
+  );
+
+  @return if(map-has-key($extmods, $ext), $ext + map-get($extmods, $ext), $ext);
+}
+
+@function getFormat($ext) {
+  $formats: (
+    otf: 'opentype',
+    ttf: 'truetype',
+  );
+
+  @return if(map-has-key($formats, $ext), map-get($formats, $ext), $ext);
+}
+
+@mixin fontFace($name, $path, $filename, $weight, $exts: woff2 woff ttf svg, $style: 'normal') {
+  $src: null;
+  $fullpath: $path + '/' + $filename;
+
+  @each $ext in $exts {
+    $src: append($src, getSrcWithFormat($fullpath, getExtension($ext, $filename), getFormat($ext)), comma);
+  }
+
   @font-face {
     font-family: $name;
-    src: url($path + '.woff2') format('woff2'), url($path + '.woff') format('woff'), url($path + '.svg') format('svg'),
-      url($path + '.ttf') format('ttf');
+    src: $src;
     font-weight: $weight;
-    font-style: normal;
+    font-style: $style;
     font-display: swap;
   }
 }
 
-@include fontFace('Open Sans', './fonts/OpenSansRegular/OpenSans-Regular', 400);
-@include fontFace('Open Sans', './fonts/OpenSansBold/OpenSans-Bold', 700);
+@include fontFace('Open Sans', './fonts/OpenSansRegular', 'OpenSans-Regular', 400);
+@include fontFace('Open Sans', './fonts/OpenSansBold', 'OpenSans-Bold', 700);
