--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -9,8 +9,9 @@
 }
 
 html {
-  padding: 50px;
+  $font-size: 10px;
+  padding: 5rem;
 
   font-family: 'Open Sans', sans-serif;
-  font-size: 10px;
+  font-size: $font-size;
 }
