Add i18n to storybook, add Input, Heading, Details, Button to ui-kit

--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -1,6 +1,10 @@
 :root {
   --white: #ffffff;
-  --light-blue: rgb(0 125 250 / 60%);
-  --gray: #86868b;
   --black: #1d1d1f;
+  --gray: #86868b;
+  --blue: #007aff;
+  --hover-blue: #0077ed;
+  --ghost-blue: rgb(0 122 255 / 15%);
+  --hover-ghost-blue: rgb(0 122 255 / 20%);
+  --light-blue: rgb(0 125 250 / 60%);
 }
