Add select component

--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -2,9 +2,11 @@
   --white: #ffffff;
   --black: #1d1d1f;
   --gray: #86868b;
+  --light-gray: #d6d6d6;
   --blue: #007aff;
   --hover-blue: #0077ed;
   --ghost-blue: rgb(0 122 255 / 15%);
   --hover-ghost-blue: rgb(0 122 255 / 20%);
   --light-blue: rgb(0 125 250 / 60%);
+  --red: #e30000;
 }
