--- a/src/shared/ui-kit/TextField/styles/TextField.module.scss
+++ b/src/shared/ui-kit/TextField/styles/TextField.module.scss
@@ -4,6 +4,7 @@ $font-size: 1.6rem;
 .root {
   display: inline-block;
   align-items: center;
+  cursor: text;
 }
 
 .label {
@@ -22,6 +23,13 @@ $font-size: 1.6rem;
 
   background-color: var(--white);
   border-radius: 1.2rem;
+
+  &[type='number'] {
+    &::-webkit-inner-spin-button,
+    &::-webkit-outer-spin-button {
+      visibility: hidden;
+    }
+  }
 
   &::placeholder {
     user-select: none;
