--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -3,6 +3,7 @@
   --black: #1d1d1f;
   --gray: #86868b;
   --light-gray: #d6d6d6;
+  --ghost-gray: #e9e8e8;
   --blue: #007aff;
   --hover-blue: #0077ed;
   --ghost-blue: rgb(0 122 255 / 15%);
