--- a/src/shared/ui-kit/Modal/styles/Footer.module.scss
+++ b/src/shared/ui-kit/Modal/styles/Footer.module.scss
@@ -1,3 +1,6 @@
 .footer {
-  padding: 1.2rem;
+  padding: 2rem;
+
+  background-color: var(--white);
+  box-shadow: -0.4rem 0 1rem var(--ghost-gray);
 }
