--- a/src/app/styles/utils.scss
+++ b/src/app/styles/utils.scss
@@ -10,3 +10,18 @@
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
 }
+
+@mixin scroll {
+  &::-webkit-scrollbar {
+    width: 0.8rem;
+
+    background-color: var(--white);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--light-gray);
+    border-radius: 5rem;
+
+    cursor: pointer;
+  }
+}
