--- a/src/shared/ui-kit/Modal/styles/Body.module.scss
+++ b/src/shared/ui-kit/Modal/styles/Body.module.scss
@@ -1,3 +1,9 @@
+@import '@app/styles/utils';
+
 .body {
-  padding: 1.2rem;
+  max-height: 100%;
+  padding: 2rem;
+  overflow: auto;
+
+  @include scroll();
 }
