--- a/src/shared/ui-kit/Modal/styles/Header.module.scss
+++ b/src/shared/ui-kit/Modal/styles/Header.module.scss
@@ -1,3 +1,8 @@
 .header {
-  padding: 1.2rem;
+  z-index: 1000;
+
+  padding: 2rem;
+
+  background-color: var(--white);
+  box-shadow: 0 0.4rem 1rem var(--ghost-gray);
 }
