--- a/src/shared/ui-kit/Text/styles/Text.module.scss
+++ b/src/shared/ui-kit/Text/styles/Text.module.scss
@@ -2,17 +2,17 @@
   color: inherit;
 }
 
-.small {
+.s {
   font-size: 1.4rem;
   line-height: 1.6rem;
 }
 
-.medium {
+.m {
   font-size: 1.6rem;
   line-height: 1.8rem;
 }
 
-.large {
+.l {
   font-size: 2rem;
   line-height: 2.2rem;
 }
