--- a/src/shared/ui-kit/CheckBoxButton/styles/CheckboxButton.module.scss
+++ b/src/shared/ui-kit/CheckBoxButton/styles/CheckboxButton.module.scss
@@ -46,18 +46,18 @@
   &:has(:checked) {
     color: var(--blue);
 
-    background-color: var(--ghost-blue);
+    background-color: var(--ultra-light-blue);
   }
 }
 
 .regular {
   color: var(--blue);
 
-  background-color: var(--ghost-blue);
+  background-color: var(--ultra-light-blue);
 
   &:hover,
   &:has(:focus-visible) {
-    background-color: var(--hover-ghost-blue);
+    background-color: var(--hover-light-blue);
     transition: background-color 0.2s;
   }
 
