--- a/src/shared/ui-kit/Modal/styles/Header.module.scss
+++ b/src/shared/ui-kit/Modal/styles/Header.module.scss
@@ -4,5 +4,5 @@
   padding: 2rem;
 
   background-color: var(--white);
-  box-shadow: 0 0.4rem 1rem var(--ghost-gray);
+  box-shadow: 0 0.4rem 1rem var(--ultra-light-gray);
 }
