--- a/src/features/pack/ui/TagsModal/styles/Tag.module.scss
+++ b/src/features/pack/ui/TagsModal/styles/Tag.module.scss
@@ -5,6 +5,6 @@
   gap: 0.8rem;
   align-items: center;
 
-  background-color: var(--ghost-blue);
+  background-color: var(--ultra-light-blue);
   border-radius: 1.2rem;
 }
