--- a/src/shared/ui-kit/Modal/styles/Footer.module.scss
+++ b/src/shared/ui-kit/Modal/styles/Footer.module.scss
@@ -2,5 +2,5 @@
   padding: 2rem;
 
   background-color: var(--white);
-  box-shadow: -0.4rem 0 1rem var(--ghost-gray);
+  box-shadow: -0.4rem 0 1rem var(--ultra-light-gray);
 }
